prevent overflow in act scheduling

--- a/intranet/static/css/eighth.schedule.css
+++ b/intranet/static/css/eighth.schedule.css
@@ -60,6 +60,7 @@ tr.scheduled .block-name {
 
 }
 
+
 tr.form-row.hidden input,
 tr.form-row.hidden textarea,
 tr.form-row.hidden .selectize-input {
@@ -127,4 +128,8 @@ tr.form-row.hidden .selectize-input {
 .propagate-direction .selectize-control {
     width: 80px;
     display: inline-block;
+}
+
+td[data-field="capacity"] {
+    white-space: nowrap;
 }
